# kafka-stream-aggregator

./: .gitignore  Makefile  docker-compose.override.yaml  docker-compose.yaml  prometheus.yaml  readme.md
config/agg-producer/: Dockerfile
config/agg-producer/config/: default.toml
config/raw-consumer-jdbc-sink/: raw-pg.json
config/raw-producer/: Dockerfile
config/raw-producer/config/: default.toml
services/kstream-agg-rs/: Cargo.toml  readme.md
services/kstream-agg-rs/src/: config.rs  consumer.rs  lib.rs  models.rs  producer.rs
services/raw-consumer-jdbc-sink/: event-pg.json
